; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/cxgbi/extr_libcxgbi.c_ddp_adjust_page_table.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/cxgbi/extr_libcxgbi.c_ddp_adjust_page_table.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PAGE_SIZE = common dso_local global i64 0, align 8
@ddp_page_shift = common dso_local global i64* null, align 8
@.str = private unnamed_addr constant [38 x i8] c"PAGE_SIZE 0x%lx too small, min 0x%lx\0A\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@PAGE_SHIFT = common dso_local global i64 0, align 8
@DDP_PGIDX_MAX = common dso_local global i32 0, align 4
@ddp_page_order = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @ddp_adjust_page_table to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ddp_adjust_page_table() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = load i64, i64* @PAGE_SIZE, align 8
  %6 = load i64*, i64** @ddp_page_shift, align 8
  %7 = getelementptr inbounds i64, i64* %6, i64 0
  %8 = load i64, i64* %7, align 8
  %9 = shl i64 1, %8
  %10 = icmp ult i64 %5, %9
  br i1 %10, label %11, label %20

11:                                               ; preds = %0
  %12 = load i64, i64* @PAGE_SIZE, align 8
  %13 = load i64*, i64** @ddp_page_shift, align 8
  %14 = getelementptr inbounds i64, i64* %13, i64 0
  %15 = load i64, i64* %14, align 8
  %16 = shl i64 1, %15
  %17 = call i32 @pr_info(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0), i64 %12, i64 %16)
  %18 = load i32, i32* @EINVAL, align 4
  %19 = sub nsw i32 0, %18
  store i32 %19, i32* %1, align 4
  br label %55

20:                                               ; preds = %0
  %21 = load i64*, i64** @ddp_page_shift, align 8
  %22 = getelementptr inbounds i64, i64* %21, i64 0
  %23 = load i64, i64* %22, align 8
  %24 = shl i64 1, %23
  %25 = call i32 @get_order(i64 %24)
  store i32 %25, i32* %3, align 4
  %26 = load i64, i64* @PAGE_SHIFT, align 8
  %27 = shl i64 1, %26
  %28 = call i32 @get_order(i64 %27)
  store i32 %28, i32* %4, align 4
  store i32 0, i32* %2, align 4
  br label %29

29:                                               ; preds = %51, %20
  %30 = load i32, i32* %2, align 4
  %31 = load i32, i32* @DDP_PGIDX_MAX, align 4
  %32 = icmp slt i32 %30, %31
  br i1 %32, label %33, label %54

33:                                               ; preds = %29
  %34 = load i32, i32* %4, align 4
  %35 = load i32, i32* %3, align 4
  %36 = sub i32 %34, %35
  %37 = load i32, i32* %2, align 4
  %38 = add i32 %36, %37
  %39 = load i32*, i32** @ddp_page_order, align 8
  %40 = load i32, i32* %2, align 4
  %41 = sext i32 %40 to i64
  %42 = getelementptr inbounds i32, i32* %39, i64 %41
  store i32 %38, i32* %42, align 4
  %43 = load i64, i64* @PAGE_SHIFT, align 8
  %44 = load i32, i32* %2, align 4
  %45 = sext i32 %44 to i64
  %46 = add i64 %43, %45
  %47 = load i64*, i64** @ddp_page_shift, align 8
  %48 = load i32, i32* %2, align 4
  %49 = sext i32 %48 to i64
  %50 = getelementptr inbounds i64, i64* %47, i64 %49
  store i64 %46, i64* %50, align 8
  br label %51

51:                                               ; preds = %33
  %52 = load i32, i32* %2, align 4
  %53 = add nsw i32 %52, 1
  store i32 %53, i32* %2, align 4
  br label %29

54:                                               ; preds = %29
  store i32 0, i32* %1, align 4
  br label %55

55:                                               ; preds = %54, %11
  %56 = load i32, i32* %1, align 4
  ret i32 %56
}

declare dso_local i32 @pr_info(i8*, i64, i64) #1

declare dso_local i32 @get_order(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
